// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonSplitMenu /> with disabled true should render correctly 1`] = `
<div
  data-radium={true}
>
  <span
    data-radium={true}
    style={
      Object {
        "position": "relative",
        "zIndex": 10,
      }
    }
  >
    <InjectIntl(Button)
      disabled={true}
      hasSubButtons={true}
      id="test-id-2-main-button"
      onClick={[Function]}
      style={
        Object {
          "borderRadius": "3px 0 0 3px",
          "padding": "9px 0px 9px 17px",
          "position": "relative",
        }
      }
      text={
        Object {
          "defaultMessage": "Cancel",
          "id": "app.containers.EmailContentArea.cancel",
        }
      }
      type="primaryBlue"
    >
      <i
        className="fa fa-caret-down"
        data-radium={true}
        onBlur={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "borderLeft": "1px #FFFFFF solid",
            "margin": "0 0 0 10px",
            "padding": "0 10px",
          }
        }
      />
    </InjectIntl(Button)>
    <div
      className="button-dropdown-click-mask"
      data-radium={true}
      onClick={[Function]}
      style={
        Object {
          "cursor": "default",
          "height": "34px",
          "position": "absolute",
          "right": 0,
          "top": "-7px",
          "width": "25px",
          "zIndex": 100,
        }
      }
    >
       
    </div>
  </span>
</div>
`;

exports[`<ButtonSplitMenu /> with required props and text should render correctly 1`] = `
<div
  data-radium={true}
>
  <span
    data-radium={true}
    style={
      Object {
        "position": "relative",
        "zIndex": 10,
      }
    }
  >
    <InjectIntl(Button)
      disabled={false}
      hasSubButtons={true}
      id="test-id-2-main-button"
      onClick={[Function]}
      style={
        Object {
          "borderRadius": "3px 0 0 3px",
          "padding": "9px 0px 9px 17px",
          "position": "relative",
        }
      }
      text={
        Object {
          "defaultMessage": "Wrap Up Off",
          "id": "app.containers.ContentAreaTop.wrapupOff",
        }
      }
      type="primaryBlue"
    >
      <i
        className="fa fa-caret-down"
        data-radium={true}
        onBlur={[Function]}
        onFocus={[Function]}
        style={
          Object {
            "borderLeft": "1px #FFFFFF solid",
            "margin": "0 0 0 10px",
            "padding": "0 10px",
          }
        }
      />
    </InjectIntl(Button)>
    <div
      className="button-dropdown-click-mask"
      data-radium={true}
      onClick={[Function]}
      style={
        Object {
          "cursor": "pointer",
          "height": "34px",
          "position": "absolute",
          "right": 0,
          "top": "-7px",
          "width": "25px",
          "zIndex": 100,
        }
      }
    >
       
    </div>
  </span>
</div>
`;
